--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,21 +19,45 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/etCountry"
+                android:id="@+id/enFirstName"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_weight="0.75"
+                android:hint="FirstName"
+                android:gravity="center"/>
+
+            <EditText
+                android:id="@+id/enLastName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.75"
+                android:hint="LastName"
+                android:gravity="center"/>
 
         </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="horizontal">
 
+            <EditText
+                android:id="@+id/enClientID"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.75"
+                android:hint="ClientID"
+                android:gravity="center"/>
+
+            <EditText
+                android:id="@+id/enNationalID"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.75"
+                android:hint="National ID"
+                android:gravity="center"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
